# pathological-macros

./: Cargo.toml  Justfile  README.md
crates/pathological-macro/: Cargo.toml
crates/pathological-macro/src/: lib.rs
crates/solution-against-normal/: Cargo.toml
crates/solution-against-normal/src/: main.rs
crates/solution-against-pathological/: Cargo.toml
crates/solution-against-pathological/src/: lib.rs
crates/solution-macro/: Cargo.toml
crates/solution-macro/src/: lib.rs  lifetimes.rs  visitor.rs
crates/yoke-problem/: Cargo.toml
crates/yoke-problem/src/: main.rs
crates/yoke-unsupported/: Cargo.toml
crates/yoke-unsupported/src/: lib.rs
