[workspace]
resolver = "3"
members = [
    "crates/pathological-macro",
    "crates/solution-against-normal",
    "crates/solution-against-pathological",
    "crates/solution-macro",
    "crates/yoke-problem",
    "crates/yoke-unsupported"
]

[workspace.package]
edition      = "2024"
rust-version = "1.92"
repository   = "https://github.com/robofinch/pathological-macros"
license      = "MIT OR Apache-2.0"

[workspace.dependencies]
pathological-macro = { version = "0.1.0", path = "crates/pathological-macro" }
solution-macro     = { version = "0.1.0", path = "crates/solution-macro"     }

proc-macro2  = "1.0.105"
quote        = "1.0.43"
syn          = "2.0.114"
synstructure = "0.13.2"
yoke         = { version = "=0.8.1", features = ["derive"] }
zerovec      = { version = "0.11.5", default-features = false, features = ["alloc", "yoke"]}
