[package]
name         = "pathological-macro"
authors      = ["Finley Huggins"]
description  = "a problematic attribute macro that can mislead attempted type reflection"
version      = "0.1.0"
publish      = false
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[lib]
proc-macro = true

[dependencies]
quote.workspace = true
