[package]
name         = "solution-against-normal"
authors      = ["Finley Huggins"]
description  = "testing solution-macro against normal scenarios"
version      = "0.1.0"
publish      = false
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[dependencies]
solution-macro.workspace = true
