[package]
name         = "solution-macro"
authors      = ["Finley Huggins"]
description  = "improved macro for derive(Yokeable)"
version      = "0.1.0"
publish      = false
edition      .workspace = true
repository   .workspace = true
rust-version = "1.85"
license      = "Unicode-3.0"

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features = ["fold"] }
synstructure.workspace = true
