[package]
name         = "yoke-problem"
authors      = ["Finley Huggins"]
description  = "unsoundness from derive(Yokeable) + pathological_macro"
version      = "0.1.0"
publish      = false
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[dependencies]
pathological-macro.workspace = true
yoke.workspace = true
