[package]
name         = "yoke-unsupported"
authors      = ["Finley Huggins"]
description  = "show that derive(Yokeable) does not fully support macro types"
version      = "0.1.0"
publish      = false
edition      .workspace = true
rust-version .workspace = true
repository   .workspace = true
license      .workspace = true

[dependencies]
yoke.workspace = true
